--- a/style.css
+++ b/style.css
@@ -22,12 +22,10 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #fff;
     color: var(--dark-color);
-    padding-top: 2rem;
 }
 
 main {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
 }
@@ -36,10 +34,35 @@ main {
     padding: 0 1.5rem;
 }
 
-.title {
-    color: var(--orange-color);
+#title {
+    color: #EC524299;
     font-weight: 700;
     font-size: 2.5rem;
+    background: url('./images/stage.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+
+#header-wrapper {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    padding: 2rem 1.5rem;
+    background-color: var(--light-color);
+    overflow: hidden;
+}
+
+#stage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    opacity: 0.1;
 }
 
 #event-desc {
@@ -49,6 +72,7 @@ main {
     padding: 1rem;
     line-height: 1.5rem;
     background-color: var(--light-color);
+    z-index: 5;
 }
 
 #date {
@@ -64,7 +88,6 @@ main {
 /* ------ Program activities ------ */
 
 #program-activities {
-    margin: 5rem 0 0 0;
     display: flex;
     flex-direction: column;
     background-color: #272A31;
@@ -94,7 +117,7 @@ main {
 .program-card {
     display: flex;
     background-color: #494b50;
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 0;
 }
 
 .half-area-ctr {
@@ -109,6 +132,8 @@ main {
 .activity-name {
     color: var(--orange-color);
     align-self: center;
+    width: 100%;
+    text-align: center;
 }
 
 #join-btn {
@@ -120,6 +145,7 @@ main {
     border-radius: none;
     border: transparent;
     font-size: 1.2rem;
+    transition: 100ms ease-in-out;
 }
 
 #join-btn:hover {
@@ -127,13 +153,16 @@ main {
     background-color: #da766b;
 }
 
+#join-btn:active {
+    transform: scale(0.95);
+}
+
 /* ------ Artist cards ------ */
 
 #artists {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
     color: #10151B;
     width: 100%;
 }
@@ -141,6 +170,7 @@ main {
 #artists-header {
     margin: 2rem 0;
     display: flex;
+    grid-column: 1 / -1;
     flex-direction: column;
     align-items: center;
     font-size: 1.2rem;
@@ -196,4 +226,85 @@ main {
     padding: 1rem 0;
     background-color: #fff;
     font-size: 1.2rem;
+    font-weight: 600;
+    border-radius: 0.4rem;
+    margin: 2rem 0;
+    border-color: #dcdcdc;
+    border-width: 0.15rem;
+    box-shadow: 0.2rem 0.2rem 1rem #dcdcdcaa;
+    border-style: solid;
+}
+
+#more-btn:hover {
+    cursor: pointer;
+}
+
+#more-icon {
+    color: var(--orange-color);
+    margin-left: 1rem;
+}
+
+header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#header-1 {
+    display: none;
+    width: 100%;
+    height: 2rem;
+    background-color: var(--dark-color);
+}
+
+#header-2 {
+    width: 100%;
+    height: 8rem;
+    background-color: #fff;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+}
+
+#footer-1 {
+    width: 100%;
+    height: 15rem;
+    background-color: var(--dark-color);
+}
+
+#footer-2 {
+    width: 100%;
+    height: 6rem;
+}
+
+@media only screen and (min-width: 765px) {
+    main {
+        padding: 0 10rem;
+    }
+
+    #activities-ctr {
+        flex-direction: row;
+        padding: 0 10rem;
+    }
+
+    .program-card {
+        flex-direction: column;
+        flex: 1 1;
+        gap: 1rem;
+        padding: 1rem;
+    }
+
+    #header-1 {
+        display: flex;
+    }
+
+    #artists {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #header-wrapper {
+        padding: 2rem 10rem;
+    }
 }
