--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 1.5rem;
 }
 
 #title {
@@ -46,10 +45,14 @@ main {
   position: relative;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   padding: 2rem 1.5rem;
   background-color: var(--light-color);
   overflow: hidden;
+}
+
+#header-img {
+  width: 8rem;
 }
 
 #stage {
@@ -86,10 +89,11 @@ main {
 #program-activities {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: #272a31;
   color: var(--light-color);
   padding: 2rem;
-  width: 100vw;
+  width: 100%;
 }
 
 #activities-header {
@@ -109,6 +113,7 @@ main {
   flex-direction: column;
   gap: 0.6rem;
   width: 100%;
+  max-width: 50rem;
 }
 
 .program-card {
@@ -162,6 +167,8 @@ main {
   gap: 2rem;
   color: #10151b;
   width: 100%;
+  max-width: 70rem;
+  padding: 0 2rem;
 }
 
 #artists-header {
@@ -241,22 +248,39 @@ main {
 }
 
 header {
-  width: 100%;
   display: flex;
   flex-direction: column;
+  overflow: visible;
 }
 
 #header-1 {
   display: none;
   width: 100%;
-  height: 2rem;
   background-color: var(--dark-color);
 }
 
 #header-2 {
   width: 100%;
-  height: 8rem;
   background-color: #fff;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+#desktop-menu {
+  display: none;
+}
+
+#bars-button {
+  position: absolute;
+  top: 30%;
+  left: 1rem;
+  font-size: 3rem;
+  z-index: 11;
+}
+
+#bars-button:hover {
+  cursor: pointer;
 }
 
 footer {
@@ -275,14 +299,53 @@ footer {
   height: 6rem;
 }
 
+/* ------ Popup ------ */
+
+#popup {
+  display: flex;
+  position: absolute;
+  width: 0;
+  top: 50%;
+  left: 0;
+  z-index: 10;
+  background-color: #fff;
+  justify-content: center;
+  overflow: hidden;
+}
+
+#popup-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+#popup li {
+  list-style: none;
+}
+
+#popup li:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.expanding {
+  animation: expand 200ms ease;
+}
+
+.collapsing {
+  animation: collapse 200ms ease;
+}
+
+.unactive {
+  display: none;
+}
+
+@media only screen and (min-width: 1000px) {}
+
 @media only screen and (min-width: 765px) {
-  main {
-    padding: 0 10rem;
-  }
 
   #activities-ctr {
     flex-direction: row;
-    padding: 0 10rem;
   }
 
   .program-card {
@@ -294,6 +357,59 @@ footer {
 
   #header-1 {
     display: flex;
+    justify-content: flex-end;
+    padding: 0.5rem 0;
+  }
+
+  #header-1 ul {
+    display: flex;
+    align-items: center;
+    color: var(--light-color);
+    gap: 2rem;
+    margin-right: 5rem;
+  }
+
+  #header-1 li {
+    list-style: none;
+    font-size: 1.2rem;
+  }
+
+  #header-1 li:nth-child(n+3) {
+    font-size: 0.8rem;
+  }
+
+  #header-2 {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 5rem;
+    flex-wrap: wrap;
+    overflow: visible;
+  }
+
+  #desktop-menu {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+    font-weight: 700;
+  }
+
+  #desktop-menu li {
+    list-style: none;
+    text-decoration: none;
+  }
+
+  #desktop-menu li:hover {
+    cursor: pointer;
+    opacity: 0.8;
+  }
+
+  #desktop-menu li:nth-child(1) {
+    color: var(--orange-color);
+  }
+
+  #desktop-menu li:last-child {
+    border: solid 0.2rem var(--orange-color);
+    padding: 0.5rem;
   }
 
   #artists {
@@ -302,5 +418,33 @@ footer {
 
   #header-wrapper {
     padding: 2rem 10rem;
+  }
+
+  #popup {
+    display: none;
+  }
+
+  #bars-button {
+    display: none;
+  }
+}
+
+@keyframes expand {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 8rem;
+  }
+}
+
+@keyframes collapse {
+  from {
+    width: 8rem;
+  }
+
+  to {
+    width: 0;
   }
 }
